<?xml version="1.0" encoding="utf-8"?>
<ViewSwitcher xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/viewSwitcher1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:inAnimation="@android:anim/slide_in_left">

    <ScrollView
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/back"
            android:orientation="vertical"
            tools:context=".Submit">

            <ImageView
                android:id="@+id/lung"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/indeks" />

            <TextView
                android:id="@+id/summary"
                style="@style/quest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/xl_margin"
                android:layout_marginTop="@dimen/xl_margin"
                android:text="@string/sum_mes"
                android:textStyle="bold" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/bu_s"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/button_shape"
                    android:onClick="answers"
                    android:text="@string/bu_s" />


                <Button
                    android:id="@+id/share_button"
                    style="@style/sub_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/bu_s"
                    android:layout_toLeftOf="@id/try_button"
                    android:onClick="share"
                    android:text="@string/sh" />

                <Button
                    android:id="@+id/try_button"
                    style="@style/sub_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/bu_s"
                    android:layout_centerHorizontal="true"
                    android:onClick="trya"
                    android:text="@string/trya" />

                <Button
                    android:id="@+id/learn_button"
                    style="@style/sub_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/bu_s"
                    android:layout_gravity="right"
                    android:layout_marginRight="@dimen/m_margin"
                    android:layout_toRightOf="@id/try_button"
                    android:onClick="learn"
                    android:text="@string/learn" />


            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

    <ScrollView
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#b2bed4"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/blueworld"/>

        <TextView
            android:id="@+id/ans1"
            style="@style/Answers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ans1" />

        <TextView
            android:id="@+id/ans2"
            style="@style/Answers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ans2" />

        <TextView
            android:id="@+id/ans3"
            style="@style/Answers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ans3" />

        <TextView
            android:id="@+id/ans4"
            style="@style/Answers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ans4" />

        <TextView
            android:id="@+id/ans5"
            style="@style/Answers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ans5" />

        <Button
            android:id="@+id/bu_s2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_shape"
            android:onClick="answers"
            android:text="@string/ans_b" />

    </LinearLayout>
    </ScrollView>

</ViewSwitcher>

